--- a/styles/home.scss
+++ b/styles/home.scss
@@ -1,7 +1,9 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css");
+
 h1 {
   color: tomato;
 }
-
 body {
   background: white;
   color: black;
@@ -37,6 +39,8 @@ body {
 
 .chatbar-username {
   flex: 2;
+  font-weight: bold;
+
 }
 
 .message {
